--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: remove
-repo_url: https://github.com/HeyItsGilbert/MazeMonsterModule.git
+site_name: http://mazerats.github.io/
+repo_url: https://github.com/HeyItsGilbert/MazeRats
 theme: readthedocs
 
