Change site_name on mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: http://mazerats.github.io/
+site_name: https://heyitsgilbert.github.io/MazeRats/
 repo_url: https://github.com/HeyItsGilbert/MazeRats
 theme: readthedocs
 
