--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
 site_name: https://heyitsgilbert.github.io/MazeRats/
 repo_url: https://github.com/HeyItsGilbert/MazeRats
-theme: readthedocs
+theme: midnight
 
