Fix module check

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,8 +19,8 @@ jobs:
         # Give an id to the step, so we can reference it later
         id: check_if_versions_bumped
         run: |
-          [version]$GalleryVersion = Get-NextNugetPackageVersion -Name RPGDice -ErrorAction Stop
-          [version]$GithubVersion = Get-MetaData -Path ./RPGDice/RPGDice.psd1 -PropertyName ModuleVersion -ErrorAction Stop
+          [version]$GalleryVersion = Get-NextNugetPackageVersion -Name MazeRats -ErrorAction Stop
+          [version]$GithubVersion = Get-MetaData -Path ./MazeRats/MazeRats.psd1 -PropertyName ModuleVersion -ErrorAction Stop
           $bumped = $GithubVersion -ge $GalleryVersion
 
           # Set the output named "version_bumped"
