--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,5 +30,5 @@ jobs:
         shell: pwsh
         if: steps.check_if_versions_bumped.outputs.version_bumped == 'True'
         env:
-          PSGALLERY_API_KEY: ${{ secrets.PS_GALLERY_KEY }}
+          PSGALLERY_API_KEY: ${{ secrets.PSGALLERY_API_KEY }}
         run: ./build.ps1 -Task Publish -Bootstrap
