--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -16,12 +16,12 @@ jobs:
       run: |
         $d = (Import-PowerShellDataFile .\requirements.psd1).GetEnumerator() | Where-Object { $_.Name -ne 'PSDependOptions'}
         $output = ($d | ForEach-Object { "{0}:{1}" -F $_.Name, $_.Value.Version}) -join ' '
-        Write-Host "::set-output name=modules-to-cache::$output"
+        Add-Content -Path $GITHUB_OUTPUT -Value "modules-to-cache=$output"
     - name: Install and cache PowerShell modules
       id: psmodulecache
       uses: potatoqualitee/psmodulecache@v4.5
       with:
-        modules-to-cache: steps.getdepends.outputs.modules-to-cache
+        modules-to-cache: ${{ steps.getdepends.outputs.modules-to-cache}}
         shell: pwsh
     - name: Test
       shell: pwsh
