Copy readme to docs

--- a/.github/workflows/Mkdocs.yaml
+++ b/.github/workflows/Mkdocs.yaml
@@ -26,7 +26,10 @@ jobs:
 
           # Set the output named "docs_changed"
           Write-Host "::set-output name=docs_changed::$HasDiff"
-
+      - name: Copy readme
+        shell: pwsh
+        run: |
+          Copy-Item README.md docs/index.md
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
         if: steps.check_file_changed.outputs.docs_changed == 'True'
