Add mkdocs plugins

--- a/.github/workflows/Mkdocs.yaml
+++ b/.github/workflows/Mkdocs.yaml
@@ -35,3 +35,4 @@ jobs:
         if: steps.check_file_changed.outputs.docs_changed == 'True'
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+          REQUIREMENTS: docs/requirements.txt
